# quantbit_foundry_erp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
quantbit_foundry_erp/: hooks.py
quantbit_foundry_erp/fixtures/: foundry_filter_setting_doctype.json  role.json
quantbit_foundry_erp/public/js/: filter.js
quantbit_foundry_erp/quantbit_foundry_erp/custom/: item.json  item_barcode.json  item_group.json  packed_item.json  purchase_order.json  purchase_order_item.json  sales_order.json  sales_order_item.json  stock_entry.json
quantbit_foundry_erp/quantbit_foundry_erp/doctype/additional_cost/: additional_cost.json  additional_cost.py
quantbit_foundry_erp/quantbit_foundry_erp/doctype/casting_treatment_master/: casting_treatment_master.js  casting_treatment_master.json  casting_treatment_master.py  test_casting_treatment_master.py
quantbit_foundry_erp/quantbit_foundry_erp/doctype/core_type/: core_type.js  core_type.json  core_type.py  test_core_type.py
quantbit_foundry_erp/quantbit_foundry_erp/doctype/electricity_reading_details/: electricity_reading_details.json  electricity_reading_details.py
quantbit_foundry_erp/quantbit_foundry_erp/doctype/finished_item_details/: finished_item_details.json  finished_item_details.py
quantbit_foundry_erp/quantbit_foundry_erp/doctype/foundry_additional_cost/: foundry_additional_cost.js  foundry_additional_cost.json  foundry_additional_cost.py  test_foundry_additional_cost.py
quantbit_foundry_erp/quantbit_foundry_erp/doctype/foundry_additional_cost_details/: foundry_additional_cost_details.json  (+1 more)
(+164 files in other folders)
