[project]
name = "quantbit_foundry_erp"
authors = [
    { name = "Quantbit Technologies Pvt Ltd", email = "support@quantbit.io"}
]
description = "Our cutting-edge quantbit_foundry_erp is designed to revolutionise the way foundries manage their operations. Tailored specifically for the unique needs of the foundry industry, this comprehensive ERP solution integrates all aspects of foundry management into a single, user-friendly platform."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
